5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1822_3185.log
== TEST (2019-06-13 11:16:31) 
-- CODE:
for numpy import *
a=input()
aux1=''
aux2=''
for i in len(a/2):
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
File "XXXX", line 1
    for numpy import *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:43) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in len(a/2):
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:45) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in len(a)/2:
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:24) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in size(a)/2:
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:48) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in size(a)/2:
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:20) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)/2):
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:13) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=v[i]+aux1
	aux2=v[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:48) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=a[i]+aux1
	aux2=a[j]+aux2

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:23:41) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=aux1 +a[i]
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:25:13) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=aux1 +a[i]
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=a[i]+aux1
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:28) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=a[i]+aux1
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:26:50) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=a[i]+aux1
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:27:11) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
for i in range(len(a)//2):
	j=len(a)-1-i
	aux1=a[i]+aux1
	aux2=aux2 +a[j]

aux3=aux2+aux1
print(aux3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:35:13) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
if(len(a)%2==0):
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2 +a[j]

	aux3=aux2+aux1
	print(aux3)
else:
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2+a[j]
	c=(len(a)//2) +1
	aux3=aux2+a[c]+aux1
	print(aux3)
	
	

-- EXECUTION TIME:
1.279
-- TEST CASE 1:
---- input:
atsigologniralonirrotO
---- correct output:
Otorrinolaringologista
---- user output:
Otorrinolaringologista
-- TEST CASE 2:
---- input:
oacatupmoC
---- correct output:
Computacao
---- user output:
Computacao
-- TEST CASE 3:
---- input:
somordnilap
---- correct output:
palindromos
---- user output:
palinnromos
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:18) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
if(len(a)%2==0):
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2 +a[j]

	aux3=aux2+aux1
	print(aux3)
else:
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2+a[j]
	c=(len(a)//2) +1
	aux3=aux2+a[c]+aux1
	print(aux3)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:36:36) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
if(len(a)%2==0):
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2 +a[j]

	aux3=aux2+aux1
	print(aux3)
else:
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2+a[j]
	c=(len(a)//2)
	aux3=aux2+a[c]+aux1
	print(aux3)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:37:15) 
-- CODE:
from numpy import *
a=input()
aux1=''
aux2=''
if(len(a)%2==0):
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2 +a[j]

	aux3=aux2+aux1
	print(aux3)
else:
	for i in range(len(a)//2):
		j=len(a)-1-i
		aux1=a[i]+aux1
		aux2=aux2+a[j]
	c=(len(a)//2)
	aux3=aux2+a[c]+aux1
	print(aux3)
	
	

-- EXECUTION TIME:
0.936981
-- TEST CASE 1:
---- input:
atsigologniralonirrotO
---- correct output:
Otorrinolaringologista
---- user output:
Otorrinolaringologista
-- TEST CASE 2:
---- input:
oacatupmoC
---- correct output:
Computacao
---- user output:
Computacao
-- TEST CASE 3:
---- input:
somordnilap
---- correct output:
palindromos
---- user output:
palindromos
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
